syntax = "proto3";

message _DAppRecordReference {
  bytes reference           = 1;
  uint64 uuid               = 2;
  optional string title     = 3;
  optional bytes preview    = 4;
}
